# .claude

./: .credentials.json  .gitattributes  .gitignore  ARCHITECTURE.md  CLAUDE.md  config.py  history.jsonl  keybindings.json  pyproject.toml  settings.json  setup.py  setup.sh  setup_claude.py
backups/: .claude.json.backup.1772502820272  .claude.json.backup.1772503239203  .claude.json.backup.1772503417782  .claude.json.backup.1772503557134  .claude.json.backup.1772503665029  .claude.json.corrupted.1771994150368  .claude.json.corrupted.1771994150437  .claude.json.corrupted.1772066999604  .claude.json.corrupted.1772069134713  .claude.json.corrupted.1772073543836  .claude.json.corrupted.1772074457215  .claude.json.corrupted.1772074461188  .claude.json.corrupted.1772074461234  .claude.json.corrupted.1772074478212  .claude.json.corrupted.1772074478258  .claude.json.corrupted.1772074478297  .claude.json.corrupted.1772074478343  .claude.json.corrupted.1772074588747  .claude.json.corrupted.1772074600239  .claude.json.corrupted.1772074704333  .claude.json.corrupted.1772078812557  .claude.json.corrupted.1772078812743  .claude.json.corrupted.1772078812806  .claude.json.corrupted.1772078812981  .claude.json.corrupted.1772078818893  .claude.json.corrupted.1772078818982  .claude.json.corrupted.1772078874509  .claude.json.corrupted.1772078928483  .claude.json.corrupted.1772078928595  .claude.json.corrupted.1772078928688  .claude.json.corrupted.1772079493260  .claude.json.corrupted.1772079498445  .claude.json.corrupted.1772079559917  .claude.json.corrupted.1772079559967  (+7 more)
config/: git.toml  (+6 more)
(+714 files in other folders)
