[project]
name = "claude-hooks"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = []

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "mypy>=1.0,<2",
    "pylint>=3.0,<4",
    "pytest>=9.0.2,<10",
    "ruff>=0.8,<1",
]

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.ruff.lint]
extend-select = ["B006"]

[tool.pylint."messages control"]
disable = ["all"]
enable = ["W0102"]
